<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.DashboardFragment">




    <GridLayout
        android:id="@+id/grid_layout_dashboard"
        android:rowCount="5"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">



        <!-- ROW 1  -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_current_weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_current_weight"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/dashboard_label" />

                <TextView
                    android:id="@+id/text_current_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_no_data_available"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/dashboard_value" />
            </LinearLayout>
        </android.support.v7.widget.CardView>



        <!-- ROW 2  -->
        <!-- COLUMN 1  -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_total_weight_loss_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/dashboard_label"
                    android:text="@string/textview_total_weight_loss" />

                <TextView
                    android:id="@+id/text_total_weight_loss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/dashboard_value"
                    android:text="@string/textview_no_data_available" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- ROW 2  -->
        <!-- COLUMN 2  -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_total_weight_gain_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/dashboard_label"
                    android:text="@string/textview_total_weight_gain" />

                <TextView
                    android:id="@+id/text_total_weight_gain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/dashboard_value"
                    android:text="@string/textview_no_data_available" />
            </LinearLayout>
        </android.support.v7.widget.CardView>



        <!-- ROW 3  -->
        <!-- COLUMN 1  -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_max_weight_loss_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/dashboard_label"
                    android:text="@string/textview_max_weight_loss" />

                <TextView
                    android:id="@+id/text_max_weight_loss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/dashboard_value"
                    android:text="@string/textview_no_data_available" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- ROW 3  -->
        <!-- COLUMN 2  -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_max_weight_gain_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/dashboard_label"
                    android:text="@string/textview_max_weight_gain" />

                <TextView
                    android:id="@+id/text_max_weight_gain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/dashboard_value"
                    android:text="@string/textview_no_data_available" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!-- ROW 4  -->
        <!-- COLUMN 1  -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_number_of_entries_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/dashboard_label"
                    android:text="@string/textview_entries_amount" />

                <TextView
                    android:id="@+id/text_number_of_entries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/dashboard_value"
                    android:text="@string/textview_no_data_available" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- ROW 4  -->
        <!-- COLUMN 2  -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_avg_change_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/dashboard_label"
                    android:text="@string/textview_avg_change" />

                <TextView
                    android:id="@+id/text_avg_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/dashboard_value"
                    android:text="@string/textview_no_data_available" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- ROW 5  -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_together_since_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/dashboard_label"
                    android:text="@string/textview_together_since" />

                <TextView
                    android:id="@+id/text_together_since"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="@dimen/dashboard_value"
                    android:text="@string/textview_no_data_available" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </GridLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:src="@drawable/ic_add_white"/>

</FrameLayout>